Adding my reward amounts endpoint
