# infrastructure/postgres-adapter/src/main/java/onlydust/com/marketplace/api/postgres/adapter/mapper/UserRewardMapper.java
@@ -1,8 +1,13 @@
 package onlydust.com.marketplace.api.postgres.adapter.mapper;
 
 import onlydust.com.marketplace.api.domain.model.Currency;
+import onlydust.com.marketplace.api.domain.view.UserRewardTotalAmountsView;
 import onlydust.com.marketplace.api.domain.view.UserRewardView;
+import onlydust.com.marketplace.api.domain.view.UserTotalRewardView;
+import onlydust.com.marketplace.api.postgres.adapter.entity.read.UserRewardTotalAmountEntity;
 import onlydust.com.marketplace.api.postgres.adapter.entity.read.UserRewardViewEntity;
+
+import java.util.List;
 
 public interface UserRewardMapper {
 
@@ -30,5 +35,23 @@ public interface UserRewardMapper {
                     default -> UserRewardView.RewardStatusView.processing;
                 })
                 .build();
+    }
+
+    static UserRewardTotalAmountsView mapTotalAmountEntitiesToDomain(final List<UserRewardTotalAmountEntity> entities) {
+        final UserRewardTotalAmountsView userRewardTotalAmountsView = UserRewardTotalAmountsView.builder().build();
+        for (UserRewardTotalAmountEntity entity : entities) {
+            userRewardTotalAmountsView.addUserTotalReward(UserTotalRewardView.builder()
+                    .totalAmount(entity.getTotal())
+                    .totalDollarsEquivalent(entity.getDollarsEquivalent())
+                    .currency(switch (entity.getCurrency()) {
+                        case op -> Currency.Op;
+                        case apt -> Currency.Apt;
+                        case usd -> Currency.Usd;
+                        case eth -> Currency.Eth;
+                        case stark -> Currency.Stark;
+                    })
+                    .build());
+        }
+        return userRewardTotalAmountsView;
     }
 }
